# rust-cli-tool

./: .cargoignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  rust-analyzer.toml
.github/workflows/: ci.yml  dependabot.yml  publish.yml  release.yml
docs/: CI_CD.md
src/: cli.rs  context.rs  files.rs  git.rs  lib.rs  main.rs  output.rs  tree.rs  types.rs
tests/: code_block_tests.rs  files_tests.rs  integration_summary_tests.rs  karthika_sanity_tests.rs  line_counting_tests.rs  output_tests.rs  summary_output_tests.rs
tests/files/: include_exclude.rs  mod.rs  output_modes.rs
tests/recent_test_files/: old_file1.txt  old_file2.txt  old_file3.txt  recent_file1.txt  recent_file2.txt  recent_file3.txt
tests/unit/: mod.rs  output_unit_tests.rs  tree_unit_tests.rs
