[package]
name = "rusty-repo-context-manager"
version = "0.9.0"
edition = "2021"
authors = ["David Rivera <davidriverg@gmail.com>"]
description = "A Rust CLI tool that packages your codebase for LLMs with tree visualization and git integration"
license = "MIT"
repository = "https://github.com/RiverDave/rust-cli-tool"
homepage = "https://github.com/RiverDave/rust-cli-tool"
documentation = "https://docs.rs/rusty-repo-context-manager"
readme = "README.md"
keywords = ["cli", "llm", "repository", "context", "packaging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
git2 = "0.20.2"
glob = "0.3.3"
globset = "0.4.18"
indicatif = "0.18.0"
chrono = "0.4"
ptree = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_results = "warn"
unused_must_use = "warn"
unused_imports = "warn"
unused_assignments = "warn"
unused_mut = "warn"
unused_parens = "warn"
unused_attributes = "warn"
unused_braces = "warn"
unused_comparisons = "warn"
unused_extern_crates = "warn"
unused_features = "warn"
unused_labels = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_unsafe = "warn"
unused_variables = "warn"
